--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,23 @@
 {
     "name": "Aplikacja PWA zadanie 4",
     "short_name": "PWA App",
-    "description": "Aplikacja PWA z logowaniem i dashboardem.",
+    "description": "Aplikacja PWA z logowaniem i dashboardem, rozbudowana o nowe funkcje.",
+    "lang": "pl-PL",
     "start_url": "./index.html",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#007bff",
     "orientation": "portrait-primary",
+    "scope": "./",
     "icons": [
         {
-            "src": "images/sample.png",
+            "src": "./images/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "images/sample.png",
+            "src": "./images/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
