--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Aplikacja PWA zadanie 4",
     "short_name": "PWA App",
-    "description": "Aplikacja PWA z logowaniem i dashboardem, rozbudowana o nowe funkcje.",
+    "description": "Aplikacja PWA.",
     "lang": "pl-PL",
     "start_url": "./index.html",
     "display": "standalone",
@@ -11,13 +11,13 @@
     "scope": "./",
     "icons": [
         {
-            "src": "./images/icon-192x192.png",
+            "src": "./images/sample.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "./images/icon-512x512.png",
+            "src": "./images/sample.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
